this is the 'fix' for Bug 48368379: Canvas Off-Center, just increased border size

--- a/app/assets/stylesheets/draw.css
+++ b/app/assets/stylesheets/draw.css
@@ -20,7 +20,7 @@ position: relative;
 #myCanvas{
 /*border:1px solid #000000;
 background-color:#FFFFFF;*/
-border:1px solid #FFFFFF;
+border:2px solid #FFFFFF;
 border-style: double;
 background-color:#FFFFFF;
 /*position: absolute; 
